--- a/TestCalendar/Test Calendar/MakeTestCalendar.storyboard
+++ b/TestCalendar/Test Calendar/MakeTestCalendar.storyboard
@@ -263,10 +263,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tac-fM-rgw">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XF8-2b-xxE">
-                                        <rect key="frame" x="0.0" y="20" width="375" height="60"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eK9-ZR-WUe">
                                                 <rect key="frame" x="20" y="20" width="20" height="20"/>
@@ -300,7 +300,7 @@
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="勉強する時間帯を選択して下さい" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fmg-VM-Nvv">
-                                        <rect key="frame" x="37" y="95" width="300" height="30"/>
+                                        <rect key="frame" x="37" y="75" width="300" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="300" id="Uxi-QA-8jB"/>
                                             <constraint firstAttribute="height" constant="30" id="rtI-UC-27N"/>
@@ -310,7 +310,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aYW-xZ-kbJ" userLabel="watch" customClass="WatchView" customModule="Test_Calendar" customModuleProvider="target">
-                                        <rect key="frame" x="32" y="140" width="311" height="311.5"/>
+                                        <rect key="frame" x="32" y="120" width="311" height="311.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gxg-jS-mHK" userLabel="PM" customClass="WatchButton" customModule="Test_Calendar" customModuleProvider="target">
                                                 <rect key="frame" x="267" y="267.5" width="44" height="44"/>
@@ -345,7 +345,7 @@
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jY0-ib-Ef4" customClass="ProcessButton" customModule="Test_Calendar" customModuleProvider="target">
-                                        <rect key="frame" x="63" y="596" width="248" height="42"/>
+                                        <rect key="frame" x="63" y="576" width="248" height="42"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="42" id="t5V-Rb-DXh"/>
                                             <constraint firstAttribute="width" constant="248" id="u0m-UH-gd6"/>
@@ -353,7 +353,7 @@
                                         <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="17"/>
                                     </button>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="終了時刻" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nmb-a0-uyg">
-                                        <rect key="frame" x="67.5" y="521.5" width="240" height="40"/>
+                                        <rect key="frame" x="67.5" y="501.5" width="240" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="240" id="gGB-we-a7D"/>
                                             <constraint firstAttribute="height" constant="40" id="um2-ut-Nbd"/>
@@ -363,7 +363,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="開始時刻" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cNg-iw-VXb">
-                                        <rect key="frame" x="67.5" y="466.5" width="240" height="40"/>
+                                        <rect key="frame" x="67.5" y="446.5" width="240" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="1Ev-XH-zZa"/>
                                             <constraint firstAttribute="width" constant="240" id="BQD-Xd-qQD"/>
@@ -383,6 +383,7 @@
                                     <constraint firstAttribute="trailing" secondItem="XF8-2b-xxE" secondAttribute="trailing" id="6yW-by-BcM"/>
                                     <constraint firstItem="aYW-xZ-kbJ" firstAttribute="top" secondItem="Fmg-VM-Nvv" secondAttribute="bottom" constant="15" id="Frg-a3-xIf"/>
                                     <constraint firstItem="XF8-2b-xxE" firstAttribute="centerX" secondItem="tac-fM-rgw" secondAttribute="centerX" id="Leh-a5-qkh"/>
+                                    <constraint firstItem="XF8-2b-xxE" firstAttribute="top" secondItem="tac-fM-rgw" secondAttribute="top" id="Mag-3i-KeR"/>
                                     <constraint firstItem="XF8-2b-xxE" firstAttribute="leading" secondItem="tac-fM-rgw" secondAttribute="leading" id="U6q-dI-zAd"/>
                                     <constraint firstItem="Fmg-VM-Nvv" firstAttribute="centerX" secondItem="tac-fM-rgw" secondAttribute="centerX" id="Wim-Ro-CaH"/>
                                     <constraint firstItem="cNg-iw-VXb" firstAttribute="centerX" secondItem="tac-fM-rgw" secondAttribute="centerX" id="Y1a-eg-Rmk"/>
@@ -391,17 +392,15 @@
                                     <constraint firstAttribute="bottom" secondItem="jY0-ib-Ef4" secondAttribute="bottom" constant="30" id="dE4-7r-8yY"/>
                                     <constraint firstItem="aYW-xZ-kbJ" firstAttribute="centerX" secondItem="tac-fM-rgw" secondAttribute="centerX" id="drV-7K-M7O"/>
                                     <constraint firstItem="jY0-ib-Ef4" firstAttribute="top" secondItem="nmb-a0-uyg" secondAttribute="bottom" constant="34.5" id="f1I-GA-JbX"/>
-                                    <constraint firstItem="XF8-2b-xxE" firstAttribute="top" secondItem="tac-fM-rgw" secondAttribute="top" constant="20" id="gm2-ls-8Cx"/>
                                     <constraint firstItem="Fmg-VM-Nvv" firstAttribute="top" secondItem="XF8-2b-xxE" secondAttribute="bottom" constant="15" id="jvu-je-eGK"/>
                                     <constraint firstItem="cNg-iw-VXb" firstAttribute="top" secondItem="aYW-xZ-kbJ" secondAttribute="bottom" constant="15" id="pB7-Zj-CTm"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="tac-fM-rgw" firstAttribute="top" secondItem="wR2-RG-PJF" secondAttribute="bottom" id="5OE-bz-SgK"/>
                             <constraint firstItem="a16-hc-s4I" firstAttribute="top" secondItem="tac-fM-rgw" secondAttribute="bottom" id="EZM-Zr-Q8t"/>
                             <constraint firstItem="tac-fM-rgw" firstAttribute="leading" secondItem="og8-YI-1VP" secondAttribute="leading" id="GIo-c9-hcz"/>
-                            <constraint firstItem="tac-fM-rgw" firstAttribute="top" secondItem="og8-YI-1VP" secondAttribute="top" id="HuK-Bn-Qk2"/>
-                            <constraint firstItem="tac-fM-rgw" firstAttribute="centerY" secondItem="og8-YI-1VP" secondAttribute="centerY" id="Xj9-Af-K3F"/>
                             <constraint firstItem="tac-fM-rgw" firstAttribute="centerX" secondItem="og8-YI-1VP" secondAttribute="centerX" id="mwy-Tw-lzX"/>
                             <constraint firstAttribute="trailing" secondItem="tac-fM-rgw" secondAttribute="trailing" id="z34-ZO-JcX"/>
                         </constraints>
