--- a/TestCalendar/Test Calendar/AddEvent.storyboard
+++ b/TestCalendar/Test Calendar/AddEvent.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="9NQ-Iw-hfX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="9NQ-Iw-hfX">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,20 +19,20 @@
                         <viewControllerLayoutGuide type="bottom" id="agf-ag-D0p"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="lEd-FN-H0Z">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="869.5"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mmV-qb-YUc" userLabel="header">
                                 <rect key="frame" x="0.0" y="20" width="375" height="60"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="イベントを追加" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aTU-vz-l3X">
-                                        <rect key="frame" x="126.5" y="20.5" width="121.5" height="20.5"/>
+                                        <rect key="frame" x="127" y="20.5" width="121.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OzF-21-Xf5">
-                                        <rect key="frame" x="19.5" y="19" width="15" height="22"/>
+                                        <rect key="frame" x="20" y="19" width="15" height="22"/>
                                         <state key="normal" image="close"/>
                                         <connections>
                                             <action selector="dismiss:" destination="9NQ-Iw-hfX" eventType="touchUpInside" id="spD-NO-pvL"/>
@@ -48,72 +48,91 @@
                                     <constraint firstItem="aTU-vz-l3X" firstAttribute="centerY" secondItem="mmV-qb-YUc" secondAttribute="centerY" id="pxl-bt-GeE"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K9L-9m-aUx">
-                                <rect key="frame" x="15" y="103.5" width="345" height="460"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Nz1-KP-aEh">
+                                <rect key="frame" x="15" y="157" width="345" height="600.5"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pf8-Dn-Rk0">
-                                        <rect key="frame" x="22" y="55" width="300" height="350"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gvR-m5-7eO">
+                                        <rect key="frame" x="0.0" y="0.0" width="345" height="60"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4BB-Uy-pgJ">
+                                                <rect key="frame" x="8" y="32" width="176" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="title" id="RZD-Hm-IYO">
-                                                <rect key="frame" x="0.0" y="28" width="300" height="44"/>
-                                                <autoresizingMask key="autoresizingMask"/>
-                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RZD-Hm-IYO" id="ROU-Ev-gr5">
-                                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                </tableViewCellContentView>
-                                            </tableViewCell>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="notification" id="Wcq-IV-RlL">
-                                                <rect key="frame" x="0.0" y="72" width="300" height="44"/>
-                                                <autoresizingMask key="autoresizingMask"/>
-                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Wcq-IV-RlL" id="hca-E3-zzG">
-                                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                </tableViewCellContentView>
-                                            </tableViewCell>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="time" id="zwh-gM-Q9S">
-                                                <rect key="frame" x="0.0" y="116" width="300" height="44"/>
-                                                <autoresizingMask key="autoresizingMask"/>
-                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zwh-gM-Q9S" id="IRf-kw-l5D">
-                                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                </tableViewCellContentView>
-                                            </tableViewCell>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="repetation" id="CgA-Vt-kpk">
-                                                <rect key="frame" x="0.0" y="160" width="300" height="44"/>
-                                                <autoresizingMask key="autoresizingMask"/>
-                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CgA-Vt-kpk" id="Vfr-Qg-rXQ">
-                                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                </tableViewCellContentView>
-                                            </tableViewCell>
-                                        </prototypes>
-                                    </tableView>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MCS-lq-CUI">
+                                        <rect key="frame" x="0.0" y="60" width="345" height="60"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="72W-4c-FzA">
+                                        <rect key="frame" x="0.0" y="120" width="345" height="60"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jPb-xv-2gZ">
+                                        <rect key="frame" x="0.0" y="180" width="345" height="120"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aqu-eH-ISn">
+                                        <rect key="frame" x="0.0" y="300" width="345" height="60.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="70X-BK-TkF">
+                                        <rect key="frame" x="0.0" y="360.5" width="345" height="119.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="714-o8-bl3">
+                                        <rect key="frame" x="0.0" y="480" width="345" height="60.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hoF-CI-iN7">
+                                        <rect key="frame" x="0.0" y="540.5" width="345" height="60"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="pf8-Dn-Rk0" firstAttribute="centerX" secondItem="K9L-9m-aUx" secondAttribute="centerX" id="RE4-8s-gbZ"/>
-                                    <constraint firstItem="pf8-Dn-Rk0" firstAttribute="width" secondItem="K9L-9m-aUx" secondAttribute="width" multiplier="0.87" id="bfS-Gx-DrN"/>
-                                    <constraint firstItem="pf8-Dn-Rk0" firstAttribute="centerY" secondItem="K9L-9m-aUx" secondAttribute="centerY" id="jGx-pI-zfN"/>
-                                    <constraint firstItem="pf8-Dn-Rk0" firstAttribute="height" secondItem="K9L-9m-aUx" secondAttribute="height" multiplier="0.76" id="obh-Zz-qIp"/>
+                                    <constraint firstItem="714-o8-bl3" firstAttribute="width" secondItem="Nz1-KP-aEh" secondAttribute="width" id="Epi-H5-Bsw"/>
+                                    <constraint firstItem="gvR-m5-7eO" firstAttribute="width" secondItem="Nz1-KP-aEh" secondAttribute="width" id="GYP-tN-wVk"/>
+                                    <constraint firstItem="MCS-lq-CUI" firstAttribute="height" secondItem="Nz1-KP-aEh" secondAttribute="height" multiplier="0.1" id="GdM-I3-RHt"/>
+                                    <constraint firstItem="70X-BK-TkF" firstAttribute="height" secondItem="Nz1-KP-aEh" secondAttribute="height" multiplier="0.2" id="M5C-sG-y7D"/>
+                                    <constraint firstItem="MCS-lq-CUI" firstAttribute="width" secondItem="Nz1-KP-aEh" secondAttribute="width" id="chx-0i-x6A"/>
+                                    <constraint firstItem="72W-4c-FzA" firstAttribute="width" secondItem="Nz1-KP-aEh" secondAttribute="width" id="e9m-KB-b6q"/>
+                                    <constraint firstItem="gvR-m5-7eO" firstAttribute="height" secondItem="Nz1-KP-aEh" secondAttribute="height" multiplier="0.1" id="fBE-92-hPg"/>
+                                    <constraint firstItem="hoF-CI-iN7" firstAttribute="height" secondItem="Nz1-KP-aEh" secondAttribute="height" multiplier="0.1" id="hJa-LQ-U1V"/>
+                                    <constraint firstItem="jPb-xv-2gZ" firstAttribute="width" secondItem="Nz1-KP-aEh" secondAttribute="width" id="jTU-MV-IQi"/>
+                                    <constraint firstItem="Aqu-eH-ISn" firstAttribute="height" secondItem="Nz1-KP-aEh" secondAttribute="height" multiplier="0.1" id="kjh-rf-n9L"/>
+                                    <constraint firstItem="hoF-CI-iN7" firstAttribute="width" secondItem="Nz1-KP-aEh" secondAttribute="width" id="lDc-t9-G9U"/>
+                                    <constraint firstItem="70X-BK-TkF" firstAttribute="width" secondItem="Nz1-KP-aEh" secondAttribute="width" id="mF8-TP-Tow"/>
+                                    <constraint firstItem="72W-4c-FzA" firstAttribute="height" secondItem="Nz1-KP-aEh" secondAttribute="height" multiplier="0.1" id="pSm-LZ-8Qj"/>
+                                    <constraint firstItem="Aqu-eH-ISn" firstAttribute="width" secondItem="Nz1-KP-aEh" secondAttribute="width" id="teF-Tq-5cm"/>
+                                    <constraint firstItem="jPb-xv-2gZ" firstAttribute="height" secondItem="Nz1-KP-aEh" secondAttribute="height" multiplier="0.2" id="vaw-wQ-fXq"/>
+                                    <constraint firstItem="714-o8-bl3" firstAttribute="height" secondItem="Nz1-KP-aEh" secondAttribute="height" multiplier="0.1" id="xiI-YD-Wd2"/>
                                 </constraints>
-                            </view>
+                            </stackView>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Pcp-RQ-bJ2">
+                                <rect key="frame" x="131" y="915" width="230" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="K9L-9m-aUx" firstAttribute="height" secondItem="lEd-FN-H0Z" secondAttribute="height" multiplier="0.69" id="Bh2-fO-IN0"/>
-                            <constraint firstItem="K9L-9m-aUx" firstAttribute="width" secondItem="lEd-FN-H0Z" secondAttribute="width" multiplier="0.92" id="CLl-jn-nxv"/>
-                            <constraint firstItem="K9L-9m-aUx" firstAttribute="centerX" secondItem="lEd-FN-H0Z" secondAttribute="centerX" id="Csk-Mn-UwU"/>
+                            <constraint firstItem="Nz1-KP-aEh" firstAttribute="width" secondItem="lEd-FN-H0Z" secondAttribute="width" multiplier="0.92" id="7ZA-3C-Qs1"/>
+                            <constraint firstItem="Nz1-KP-aEh" firstAttribute="height" secondItem="lEd-FN-H0Z" secondAttribute="height" multiplier="0.69" id="97C-HH-Ffu"/>
                             <constraint firstAttribute="trailing" secondItem="mmV-qb-YUc" secondAttribute="trailing" id="SxL-6D-2zh"/>
+                            <constraint firstItem="Nz1-KP-aEh" firstAttribute="top" secondItem="mmV-qb-YUc" secondAttribute="bottom" constant="77" id="Ubg-im-vwe"/>
+                            <constraint firstItem="Nz1-KP-aEh" firstAttribute="centerX" secondItem="lEd-FN-H0Z" secondAttribute="centerX" id="aIR-NI-5KZ"/>
                             <constraint firstItem="mmV-qb-YUc" firstAttribute="top" secondItem="C61-Ry-hy7" secondAttribute="bottom" id="qPL-0E-myB"/>
-                            <constraint firstItem="K9L-9m-aUx" firstAttribute="centerY" secondItem="lEd-FN-H0Z" secondAttribute="centerY" id="wT8-MD-XHb"/>
                             <constraint firstItem="mmV-qb-YUc" firstAttribute="leading" secondItem="lEd-FN-H0Z" secondAttribute="leading" id="yz8-Ch-sSz"/>
                         </constraints>
                     </view>
+                    <size key="freeformSize" width="375" height="869.5"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ry8-C5-k6z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="125.59999999999999" y="169.56521739130437"/>
+            <point key="canvasLocation" x="125.59999999999999" y="169.11544227886057"/>
         </scene>
     </scenes>
     <resources>
